--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -39,7 +39,17 @@ jobs:
         run: |
           cd backend
           RUST_BACKTRACE=1 cargo run -p sync_server &
-          cd ../frontend
+          cd ..
+
+          scripts/update-api-types.sh
+          cd frontend
           npm ci
+          npm run lint
+          if [[ $(git status --porcelain) ]]; then
+              git status --porcelain
+              echo "Failing CI because the working directory is not clean after updating the API types"
+              exit 1
+          fi
+
           cd ..
           scripts/e2e.sh 32
