--- a/backend/sync_server/Cargo.toml
+++ b/backend/sync_server/Cargo.toml
@@ -21,7 +21,7 @@ axum = { version = "0.7.4", features = ["ws", "macros", "tracing", "multipart"]}
 axum-extra = { version = "0.9.6", features = ["typed-header"] }
 aide-axum-typed-multipart = "0.13.0"
 axum_typed_multipart = "0.11.0"
-tower-http = { version = "0.6.1", features = ["cors", "trace", "limit"] }
+tower-http = { version = "0.6.1", features = ["cors", "trace", "limit", "timeout"] }
 tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"]}
 serde_yaml = "0.9.34"
 sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio", "uuid", "chrono"] }
