--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Setup rust
         run: |
-          cargo install sqlx-cli wasm-pack machete
+          cargo install sqlx-cli wasm-pack cargo-machete
           cd backend
           sqlx database create --database-url sqlite://db.sqlite3
           sqlx migrate run --source sync_server/src/app_state/database/migrations --database-url sqlite://db.sqlite3
