--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,8 @@
-# npm
-node_modules
-
 # Exclude macOS Finder (System Explorer) View States
 .DS_Store
 
 # Rust build folder
-backend/target
-
-# Frontend build folders
-frontend/*/dist
-
-backend/db.sqlite3*
-backend/databases
-backend/sync_server/bindings/*.ts
+target
 
 *.log
 *.sqlx
