--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,9 +22,10 @@ wasm-bindgen = { version = "0.2.99", optional = true }
 console_error_panic_hook = { version = "0.1.7", optional = true }
 
 [features]
-default = ["serde", "wasm"]
+default = []
 serde = [ "dep:serde" ]
-wasm = [ "dep:wasm-bindgen", "dep:console_error_panic_hook" ]
+wasm = [ "dep:wasm-bindgen"]
+console_error_panic_hook = [ "dep:console_error_panic_hook" ]
 
 [dev-dependencies]
 insta = "1.42.2"
