--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -40,4 +40,6 @@ jobs:
       - name: Test
         run: |
           cargo test --verbose -- --include-ignored
+          cargo test --features serde
+          cargo test --features wasm
           wasm-pack test --node --features wasm
