--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,8 +21,12 @@ wasm-bindgen = { version = "0.2.99", optional = true }
 # code size when deploying.
 console_error_panic_hook = { version = "0.1.7", optional = true }
 
+wee_alloc = { version = "0.4.2", optional = true }
+cfg-if = "1.0.1"
+
+
 [features]
-default = []
+default = [ "wasm" ]
 serde = [ "dep:serde" ]
 wasm = [ "dep:wasm-bindgen"]
 console_error_panic_hook = [ "dep:console_error_panic_hook" ]
