--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,9 @@
 {
     "files.exclude": {
         "**/snapshots": true, // cargo-insta outputs
+        "**/node_modules": true, // node.js dependencies
+        "**/dist": true, // webpack build directory
         "pkg": true, // wasm-pack build directory
         "target": true, // rust build directory
-        "**/node_modules": true, // node.js dependencies
     }
 }
