--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,11 +24,10 @@ console_error_panic_hook = { version = "0.1.7", optional = true }
 wee_alloc = { version = "0.4.2", optional = true }
 cfg-if = "1.0.1"
 
-
 [features]
-default = [ "wasm" ]
+default = []
 serde = [ "dep:serde" ]
-wasm = [ "dep:wasm-bindgen"]
+wasm = [ "dep:wasm-bindgen" ]
 console_error_panic_hook = [ "dep:console_error_panic_hook" ]
 
 [dev-dependencies]
@@ -43,7 +42,7 @@ wasm-bindgen-test = "0.3.49"
 codegen-units = 1
 lto = true
 opt-level = 3
-strip="debuginfo"  # Keep some info for better panics
+strip="symbols"
 
 [lints.rust]
 unsafe_code = "forbid"
