--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -15,7 +15,7 @@ permissions:
 # Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
 # However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
-  group: "pages"
+  group: 'pages'
   cancel-in-progress: false
 
 jobs:
@@ -31,13 +31,17 @@ jobs:
         run: |
           cargo install wasm-pack
           wasm-pack build --target web --features wasm
-          cp -R pkg/reconcile.js examples/website/
-          cp -R pkg/reconcile_bg.wasm examples/website/
+          cd reconcile-js
+          npm ci
+          npm run build
+          cd ../examples/website
+          npm ci
+          npm run build
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: examples/website
+          path: examples/website/dist
 
   deploy:
     environment:
